# SearchLab

./: .gitignore  CMakeLists.txt  CXX11.cmake  LICENSE  README.md  SearchLab.cpp  SearchLabMpi.cpp  configure.sh  points_bins.h
cases/: GenericCube.py  genericCube10x10x10.55556.msh  genericCube10x10x10.55556.pts  genericCube10x10x10_removedPoints.55556.pts  genericCube2x2x2.500000.msh  genericCube2x2x2.500000.pts  line100000.5.pts  randomCube2000000.pts  run_cases.sh  run_gnuplot_cases.sh
cases/validation/: check_bins.sh  check_hash.sh  create_bins.sh  create_hash.sh  validation_Barcelona_4_370MFluid_ascii.pts.val  validation_Barcelona_4_370M_ascii.pts.val  validation_Barcelona_fullmodel_16m_20M_ascii.pts.val  validation_Barcelona_fullmodel_8m_100M_ascii.pts.val  validation_ConfidencialBoeing777_all.pts.val  validation_ConfidencialBoeing777_all_sorted.pts.val  validation_PowerPlantM.pts.val  validation_PowerPlantM_sorted.pts.val  validation_PowerPlantM_sorted_unique.pts.val  validation_genericCube100x100x100.5051.val  validation_genericCube10x10x10.55556.val  validation_genericCube10x10x10_removedPoints.55556.val  validation_genericCube2x2x2.500000.val  validation_line100000.5.val  validation_offsetCube79x79x79.1603.val  validation_randomCube2000000.val  validation_vena_HARMINGGEE.pts.val
include/: ParallelCoherentHash.h  bins_cells_container.h  bins_cells_container_hash.h  bins_cells_container_pch.h  bins_statistics.h  bounding_box.h  clock.cc  clock.h  contact_pair.h  containers.h  distributed_bounding_box.h  global_pointer.h  interval_count.h  objects_bins.h  parallel_bins.h  parallel_coherent_hash.h  partition_bins.h  partition_bins_cells_container.h  point.h  points_bins.h  points_bins_hash.h  points_hash.h  primes.h  sl_exception.h  spatial_search_result.h  sphere_object.h  timer.h  timer_mpi.h  win_missing.h  zstr.hpp
include/configures/: sphere_object_configure.h
include/custom_utilities/: geometric_operations.h  octree_binary.h  octree_binary_cell.h  octree_driver.h
include/interfaces/: objects_old_interface.h  points_new_interface.h  points_new_interface_mpi.h  points_old_interface.h
